Closed Bug 1637948 Opened 6 years ago Closed 6 years ago

[wayland] popup is resized on hidpi while it should not

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: jhorak, Assigned: jhorak)

References

Details

Attachments

(1 file)

The window is resized when the scale = 2 despite it has correct size. This can lead to showing scrollbar on the hamburger menu for example.

We have to compare new width and height multiplied by scale because mBounds is in
real pixels while gdk_window_move_to_rect returns the size without multiplying
by scale factor.

Also to fix overflow popups we need to use NativeMoveResize in nsWindow::ResizeInt
when size of the popup has changed.

Assignee: nobody → jhorak
Status: NEW → ASSIGNED
Pushed by btara@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cf925d06654e Don't resize popup on hidpi when not needed r=stransky
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Regressions: 1640651
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: